--- a/singup2.html
+++ b/singup2.html
@@ -10,12 +10,12 @@
 <body>
     <main>
         <form action="login.php" method="post">
-          <p><label for="user">USERNAME</label><input type="text" name="user" id="iuser"></p>
-          <p><label for="iemail">EMAIL ADRESS</label><input type="text" name="email" id="iemail"> </p> 
-          <p><label for="isenha">PASSWORD</label><input type="text" name="senha" id="isenha"></p> 
-          <p><label for="terms"><input type="checkbox" value="terms"> I accept the policy and terms</label></p>
-        
-          <p><input type="submit" value="Sing up"></p>
+          <p id="iuser"><input type="text" name="user" > <label for="user">USERNAME</label></p>
+          <p id="iemail" ><input type="text" name="email" ><label for="iemail">EMAIL ADRESS</label></p>
+          <p id="isenha"><input type="text" name="senha" ><label for="isenha">PASSWORD</label></p>
+          <p id="terms"><input type="checkbox" value="terms" ><label for="terms"> I accept the policy and terms</label></p>
+          <input id="submit" type="submit" value="Sing up">
+          </form>
     </main>
   <ul>
     <li><img src="./imagens/124021.png" alt="icon twitter"></li>
